Gerar senha e adicionar conta funcionando

--- a/3 Entrega/conta-servico/src/main/resources/application.properties
+++ b/3 Entrega/conta-servico/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
 url_base=http://localhost:8081
 url_servico_funcionario=http://localhost:8082/funcionario
+url_servico_gerar_senha=http://localhost:8083/gerarSenha
