--- a/3 Entrega/conta-servico/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/3 Entrega/conta-servico/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -5,6 +5,11 @@
     "description": "A description for 'url_base'"
   },
   {
+    "name": "url_servico_gerar_senha",
+    "type": "java.lang.String",
+    "description": "A description for 'url_servico_gerar_senha'"
+  },
+  {
     "name": "url_servico_conta",
     "type": "java.lang.String",
     "description": "A description for 'url_servico_conta'"
